--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
         <h1>Öğrenciler</h1>
 
         <button id="ogrenciEkle">Öğrenci Ekle</button>
-        <h3>Toplam Öğrenci : <span id="allStudent"></span></h3>
+        <h3 class="toplamOgrenci">Toplam Öğrenci : <span id="allStudent"></span></h3>
 
     </div>
     <div class="option" id="genderSelection" >
         <label><input class="tümü" type="radio" name="genders" value="Tümü">Tümü</label>
+        <span>||</span>
         <label><input class="erkek" type="radio" name="genders" value="Erkek">Erkek</label>
+        <span>||</span>
         <label><input class="kadın" type="radio" name="genders" value="Kadın">Kadın</label>
         <ul class="burayaYaz">
             
