--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <dialog>
         <form method="dialog" id="studentİnfoForm">
+        
             <input required type="text" name="firstName" placeholder="Öğrenci Adı">
             <input required type="text" name="lastName" placeholder="Öğrenci Soyadı">
             <input required type="text" name="birthDate" placeholder="Öğrenci Doğum Tarihi">
@@ -54,15 +55,20 @@
 
         <div class="classroom" id="sinif1">
             <h1>Sınıf A</h1>
+            <span>Öğrenci Sayısı: <span class="classA"></span></span>
         </div>
         <div class="classroom" id="sinif2">
             <h1>Sınıf B</h1>
+            <span>Öğrenci Sayısı: </span><span class="classB"></span>
+            
         </div>
         <div class="classroom" id="sinif3">
             <h1>Sınıf C</h1>
+            <span>Öğrenci Sayısı: <span class="classC"></span></span>
         </div>
         <div class="classroom" id="sinif4">
             <h1>Sınıf D</h1>
+            <span>Öğrenci Sayısı: <span class="classD"></span></span>
         </div>
 
     </div>
