--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/css.css" />
     <script src="assets/js/main.js" defer></script>
-    <title>Document</title>
+    <title>Öğrenci Yönetim Sistemi</title>
   </head>
 
   <body>
